src/test/resources/typeSystemTestModels/valid/expressions/PrimaryThis.java
package typeSystemTestModels.valid.expressions;

public class PrimaryThis {
  int n = 1;
  int m = this.n;
}
