src/test/resources/typeSystemTestModels/invalid/expressions/MultiplicativeOps.java
package typeSystemTestModels.invalid.expressions;

public class MultiplicativeOps{
  int n = true * 1;
  int m = "String" / 1.2;

}